--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,11 @@
     "start": "node dist/index.js"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0"
   }
 }
