--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.0",
+    "hls.js": "^1.6.7",
     "mediasoup-client": "^3.12.5",
     "next": "15.4.3",
     "react": "19.1.0",
